<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.qqjiemian.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_main" 
    >
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="100dp"
	    android:id="@+id/btn_call"
	    android:text="@string/jinji"
	    android:textSize="60sp"
	   	    />
	  <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />
	  <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint"

         />

<!-- 	<ImageView -->
<!-- 	    android:layout_width="match_parent" -->
<!-- 	    android:layout_height="70dp" -->
<!-- 	    android:layout_marginRight="120dp" -->
<!-- 	    android:contentDescription="@string/user_name" -->
<!-- 	    android:src="@drawable/juli" /> -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/juli"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/juli_shuru"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="" />
            <Button 
                android:id="@+id/jl_laba"
	            android:layout_width="70dp"
	            android:layout_height="60dp"
	            android:src="@drawable/laba" 
	            android:text="@string/huoqu"     
	            android:contentDescription="@string/img_info"
	            android:textSize="18sp"
	    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
             android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wendu"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/wendu_shuru"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="" />
           <Button 
                android:id="@+id/wd_laba"
	            android:layout_width="70dp"
	            android:layout_height="60dp"
	            android:src="@drawable/laba" 
	            android:text="@string/huoqu"     
	            android:contentDescription="@string/img_info"
	            android:textSize="18sp"
	    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
             android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shidu"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/shidu_shuru"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="" />
            <Button 
                android:id="@+id/sd_laba"
	            android:layout_width="70dp"
	            android:layout_height="60dp"
	            android:src="@drawable/laba" 
	            android:text="@string/huoqu"     
	            android:contentDescription="@string/img_info"
	            android:textSize="18sp"
	    />
        </LinearLayout>
        <Button 
	    android:layout_width="match_parent"
	    android:layout_height="100dp"
	    android:text="@string/yuyin"
	    android:textSize="60sp"
	    />
        <Button
        android:id="@+id/lianjie_Button"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/lianjie" />
 </LinearLayout>
   